Sites: Adding HotSite, styling and whitespace fixes.

--- a/src/style/components/CategorySites.scss
+++ b/src/style/components/CategorySites.scss
@@ -1,61 +1,58 @@
-.single-category {
-    .sites-table {
-        border-collapse: collapse;
-        width: 100%;
-    
-        .single-site {
-            font-size: 12px;
-        
-            td {
-                padding: 0 5px;
-            }
-    
-            .offer {
-                .price {
-                    color: black;
-    
-                    &.hot {
-                        color: green;
-                    }
-                }
-                .condition {
-                    color: blueviolet;
-                }
-                .seller {
-                    color: black;
-                }
-            }
-        
-            .col-prices {
+#sites-table {
+    border-collapse: collapse;
+    width: 100%;
+
+    .single-site {
+        font-size: 12px;
+
+        td {
+            padding: 0 5px;
+        }
+
+        .offer {
+            .price {
                 color: black;
-                border-bottom: 1px solid rgb(119, 0, 0);
-    
-                &.hot-price {
-                    background: rgb(255, 48, 48);
-                    color: white;
-    
+
+                &.hot {
+                    color: green;
                 }
             }
-        
-            .col-image img {
-                height: 50px;
+            .condition {
+                color: blueviolet;
             }
-        
-            .col-title {
-                max-width: 200px;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                white-space: nowrap;
+            .seller {
+                color: black;
             }
-    
-            .col-actions {
-                button {
-                    border-radius: 3px;
-                    margin-left: 2px;
-                }
-                button:first-child {
-                    margin-left: 0;
-                }
+        }
+
+        .col-prices {
+            color: black;
+            border-bottom: 1px solid rgb(119, 0, 0);
+
+            &.hot-price {
+                background: rgb(255, 48, 48);
+                color: white;
+            }
+        }
+
+        .col-image img {
+            height: 50px;
+        }
+
+        .col-title {
+            max-width: 200px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+
+        .col-actions {
+            button {
+                border-radius: 3px;
+                margin-left: 2px;
+            }
+            button:first-child {
+                margin-left: 0;
             }
         }
     }
